Add model endpoint to get available models
